Minor alignment fixes, Removed imagePaste

--- a/JabbR/Content/themes/default/Chat.css
+++ b/JabbR/Content/themes/default/Chat.css
@@ -115,7 +115,6 @@ form#send-message {
     position: absolute;
     top: 45px;
     left: 0;
-    padding-top: 10px;
     width: 100%;
     height: 30px;
     background: #f5f5f5;
@@ -2690,7 +2689,7 @@ h3.userlist-header {
 
 #room-actions {
     margin-right: 5px;
-    margin-top: -3px;
+    margin-top: 8px;
     display: none;
 }
 
